test/scc/stmt/semantic-errors/046.t
void test()
{
    switch(10)
        continue;
}